# saber

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/benchmarking_examples/: unified_query_benchmarking.py
examples/query_generation_examples/: query_generation.py
examples/semantic_ops_examples/: semantic_aggregation.py  semantic_distinct.py  semantic_except.py  semantic_except_all.py  semantic_group_by.py  semantic_intersect.py  semantic_intersect_all.py  semantic_join.py  semantic_order_by.py  semantic_select.py  semantic_where.py
examples/unified_query_examples/: unified_query.py
saber/: __init__.py  benchmark.py  config.py  engine.py  llm_config.py  query_generator.py
saber/backends/: __init__.py  base_backend.py  docetl_backend.py  lotus_backend.py  palimpzest_backend.py
saber/core/: __init__.py  ast_rewriter.py  query_rewriter.py  semantic_ops.py  sql_parser.py
saber/ibis_pipeline/: __init__.py  bridge.py  executor.py  logical_plan.py  operators.py  optimizer.py  parser.py  segmenter.py
saber/utils/: __init__.py  column_utils.py  dataframe_utils.py  db_adapter.py  embedding_utils.py
scripts/: install_all_force.sh
