[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saber-query"
version = "0.3.0"
description = "SABER: A SQL-Compatible Semantic Document Processing System Based on Extended Relational Algebra"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Changjae Lee", email = "changjae@buffalo.edu"}
]
maintainers = [
    {name = "Changjae Lee", email = "changjae@buffalo.edu"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
keywords = ["database", "sql", "semantic", "ai", "llm", "query", "lotus", "docetl", "palimpzest"]
requires-python = ">=3.12, <3.13"
dependencies = [
    "openai>=1.0.0",
    "duckdb>=1.3.2",
    "sqlglotrs>=0.7.3",
    "sqlglot>=27.27.0",
    "lotus-ai>=1.1.3",
    "docetl>=0.2.4",
]

[project.optional-dependencies]
lotus = ["lotus-ai>=1.1.3"]
docetl = ["docetl>=0.2.4"]
palimpzest = ["palimpzest>=1.1.0"]
all = ["lotus-ai>=1.1.3", "docetl>=0.2.4", "palimpzest>=1.1.0"]

[project.urls]
Homepage = "https://github.com/xlab-ub/saber"
Repository = "https://github.com/xlab-ub/saber.git"
Documentation = "https://github.com/xlab-ub/saber"
Issues = "https://github.com/xlab-ub/saber/issues"

[tool.setuptools]
packages = ["saber"]

[tool.setuptools.package-dir]
saber = "saber"
